--- a/fixtures/vcr_cassettes/SulBib_API/GET_/publications/_id/returns_a_pub_with_valid_bibjson_for_sw_harvested_records.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/GET_/publications/_id/returns_a_pub_with_valid_bibjson_for_sw_harvested_records.yml
@@ -10,10 +10,11 @@ http_interactions:
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
-        \               <QueryPredicate>(\"Edler,Alice\" or \"EDLER,A\" or \"EDLER,AJ\")
-        and \"stanford\"</QueryPredicate>\n                <SearchType>ExactMatch</SearchType>\n
-        \               <Columns>AggregateText</Columns>\n                <MaximumRows>200</MaximumRows>\n
-        \             </TextSearch>\n            </Criterion>\n\n                                <Criterion>\n
+        \               <QueryPredicate>(\"Edler,Alice\" or \"Edler,A\" or \"Edler,Alice,Jim\"
+        or \"Edler,Alice,J\" or \"Edler,A,J\") and \"stanford\"</QueryPredicate>\n
+        \               <SearchType>ExactMatch</SearchType>\n                <Columns>AggregateText</Columns>\n
+        \               <MaximumRows>200</MaximumRows>\n              </TextSearch>\n
+        \           </Criterion>\n\n                                <Criterion>\n
         \               <Filter>\n                  <Column>AuthorLastName</Column>\n
         \                 <Operator>BeginsWith</Operator>\n                  <Value>EDLER</Value>\n
         \               </Filter>\n              </Criterion>\n\n                                <Criterion>\n
@@ -37,7 +38,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:11:05 GMT
+      - Fri, 15 Jul 2016 18:41:44 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,19 +67,19 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 15:53:32 GMT
+      - Fri, 15 Jul 2016 18:41:45 GMT
       Content-Length:
       - '280'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240364</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>243446</queryID>\r\n
         \ <queryResultRows>16</queryResultRows>\r\n  <totalRows>16</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:11:06 GMT
+  recorded_at: Fri, 15 Jul 2016 18:41:45 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240364?format=xml&page=0&pageSize=16&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/243446?format=xml&page=0&pageSize=16&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -90,7 +91,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:11:06 GMT
+      - Fri, 15 Jul 2016 18:41:45 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -119,7 +120,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 22:11:06 GMT
+      - Fri, 15 Jul 2016 18:41:45 GMT
       Content-Length:
       - '40920'
     body:
@@ -581,7 +582,7 @@ http_interactions:
         \   <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:11:07 GMT
+  recorded_at: Fri, 15 Jul 2016 18:41:45 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationItems?format=xml&publicationItemIDs=46946372,46558063,844542,47593787,54661564,46795732,7877232,5199247
@@ -596,7 +597,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:11:07 GMT
+      - Fri, 15 Jul 2016 18:41:45 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -625,7 +626,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 22:11:06 GMT
+      - Fri, 15 Jul 2016 18:41:46 GMT
       Content-Length:
       - '22855'
     body:
@@ -909,7 +910,7 @@ http_interactions:
         &amp; WILKINS</CopyrightPublisher>\r\n    <CopyrightCity>PHILADELPHIA</CopyrightCity>\r\n
         \ </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:11:08 GMT
+  recorded_at: Fri, 15 Jul 2016 18:41:46 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -929,7 +930,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 02 Jun 2016 22:11:09 GMT
+      - Fri, 15 Jul 2016 18:41:46 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -937,12 +938,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFC2F41750AEFD1_0932SID
+      - 9DFC2C997892E6A1_0251SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFC2F41750AEFD1_0932SID; domain=.nih.gov; path=/; expires=Fri, 02
-        Jun 2017 22:11:09 GMT
+      - ncbi_sid=9DFC2C997892E6A1_0251SID; domain=.nih.gov; path=/; expires=Sat, 15
+        Jul 2017 18:41:46 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -2444,5 +2445,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:11:10 GMT
+  recorded_at: Fri, 15 Jul 2016 18:41:48 GMT
 recorded_with: VCR 3.0.1
