--- a/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_common_last_name_first_name/returns_a_list_of_sciencewire_ids.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_common_last_name_first_name/returns_a_list_of_sciencewire_ids.yml
@@ -10,7 +10,7 @@ http_interactions:
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
-        \               <QueryPredicate>\"smith,james\" or \"SMITH,J\"</QueryPredicate>\n
+        \               <QueryPredicate>\"Smith,James\" or \"Smith,J\"</QueryPredicate>\n
         \               <SearchType>ExactMatch</SearchType>\n                <Columns>AggregateText</Columns>\n
         \               <MaximumRows>200</MaximumRows>\n              </TextSearch>\n
         \           </Criterion>\n\n                                <Criterion>\n
@@ -37,7 +37,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:11:58 GMT
+      - Fri, 15 Jul 2016 18:43:25 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,19 +66,19 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 15:53:32 GMT
+      - Fri, 15 Jul 2016 18:43:26 GMT
       Content-Length:
       - '280'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>242189</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>263024</queryID>\r\n
         \ <queryResultRows>33</queryResultRows>\r\n  <totalRows>33</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:11:58 GMT
+  recorded_at: Fri, 15 Jul 2016 18:43:27 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/242189?format=xml&page=0&pageSize=33&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/263024?format=xml&page=0&pageSize=33&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -90,7 +90,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:11:58 GMT
+      - Fri, 15 Jul 2016 18:43:27 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -119,7 +119,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 15:53:32 GMT
+      - Fri, 15 Jul 2016 18:43:27 GMT
       Content-Length:
       - '58658'
     body:
@@ -776,5 +776,5 @@ http_interactions:
         \   <CopyrightStateProvince>DC</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:12:00 GMT
+  recorded_at: Fri, 15 Jul 2016 18:43:28 GMT
 recorded_with: VCR 3.0.1
